# cufft_test

./: .gitignore  CMakeLists.txt  README.md  test_cufft.cu  timing.h  utils.h
